--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #rooms {}
 fieldset.border {border: 1px solid #000;}
 fieldset.right {float: right;}
-.room-wrap {position: relative;}
+.room-wrap {position: relative; min-height: 50px;}
 .room-wrap .toggle {position: absolute; top: 18px; left: 3px; cursor: pointer;}
 .room {display: inline-block; padding: 10px 20px 20px; border-radius: 5px; overflow: hidden; margin-left: 20px;}
 .room ul {list-style-type: none; margin-left: 6px;}
