--- a/css/styles.css
+++ b/css/styles.css
@@ -1,7 +1,7 @@
 #room-reservations {margin-top: 15px;}
 fieldset.border {border: 1px solid #000;}
 fieldset.right {float: right;}
-.room-wrap {position: relative; min-height: 50px; margin-bottom: 15px;}
+.room-wrap {position: relative; min-height: 50px; margin-bottom: 15px; width: 420px;}
 .room-wrap .toggle {position: absolute; top: 18px; left: 3px; cursor: pointer;}
 .room {display: inline-block; padding: 10px 20px 20px; border-radius: 5px; overflow: hidden; margin-left: 20px;}
 .room ul {list-style-type: none; margin-left: 6px;}
@@ -13,8 +13,9 @@ fieldset.right {float: right;}
 .room .date-time-wrap {float: left; margin-right: 35px;}
 .room .date-pick {width: 150px;}
 .room .additionals {float: left;}
-.room .delete {float: left; clear: both; cursor: pointer; display: none;}
+.room .delete {cursor: pointer; position: absolute; top: 2px; right: 0; display: none;}
 .room .delete.show {display: block;}
+.room .delete img {width: 20px;}
 
 .hidden-view {display: none; width: 390px; margin-left: 20px; border-radius: 5px; text-align: center; font-size: 16px; height: 30px; cursor: pointer; padding-top: 10px;}
 .room-wrap.hidden .hidden-view {display: block;}
