--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,14 @@
 #room-reservations {margin-top: 15px;}
+fieldset {padding: 5px;}
 fieldset.border {border: 1px solid #000;}
 fieldset.right {float: right;}
-.room-wrap {position: relative; min-height: 50px; margin-bottom: 15px; width: 420px;}
+
+.room-wrap {position: relative; min-height: 50px; margin-bottom: 15px; width: 450px;}
 .room-wrap .toggle {position: absolute; top: 18px; left: 3px; cursor: pointer;}
+.room-wrap .delete {cursor: pointer; position: absolute; top: 2px; right: 0; display: none;}
+.room-wrap .delete.show {display: block;}
+.room-wrap .delete img {width: 20px;}
+
 .room {display: inline-block; padding: 10px 20px 20px; border-radius: 5px; overflow: hidden; margin-left: 20px;}
 .room ul {list-style-type: none; margin-left: 6px;}
 .room ul.single-line li {float: left; margin-right: 8px;}
@@ -10,15 +16,19 @@ fieldset.right {float: right;}
 .room legend {font-size: 16px; width: auto; padding: 0 5px; border: 0; margin: 0; line-height: 30px;}
 .room li input[type=checkbox] {margin: 0 5px 2px 0; cursor: auto;}
 .room li input[type=radio] {margin: 0 5px 3px 0; cursor: auto;}
+.room fieldset.border.error {border: 1px solid #B94A48;}
+.room fieldset.error legend {color: #B94A48;}
 .room .date-time-wrap {float: left; margin-right: 35px;}
-.room .date-pick {width: 150px;}
+.room .date-wrap {margin-top: 0;}
+.room .date-pick {width: 175px; margin-bottom: 10px;}
+.room .ui-datepicker-inline {width: 100%;}
+.room .date-pick-input {width: 172px;}
+.room .room-names {word-wrap: break-word; width: 135px;}
 .room .additionals {float: left;}
-.room .delete {cursor: pointer; position: absolute; top: 2px; right: 0; display: none;}
-.room .delete.show {display: block;}
-.room .delete img {width: 20px;}
+.room .input-num-seats {width: 40px; margin-right: 5px;}
 
-.hidden-view {display: none; width: 390px; margin-left: 20px; border-radius: 5px; text-align: center; font-size: 16px; height: 30px; cursor: pointer; padding-top: 10px;}
+.hidden-view {display: none; width: 410px; margin-left: 20px; border-radius: 5px; text-align: center; font-size: 16px; height: 30px; cursor: pointer; padding-top: 10px;}
 .room-wrap.hidden .hidden-view {display: block;}
 
-#add {border: 1px dashed #000; width: 380px; margin-left: 20px; border-radius: 5px; cursor: pointer; padding: 6px;}
+#add {border: 1px dashed #000; width: 410px; margin-left: 30px; border-radius: 5px; cursor: pointer; padding: 6px;}
 #add span {font-size: 17px;}
